--- a/css/style.css
+++ b/css/style.css
@@ -759,7 +759,7 @@ section{
     margin-top: 40px;
     padding-top: 60px;
     width: 100%;
-    height:4614px;
+    height:4544px;
     background: #f5f5f5;
 }
 .main-center{
@@ -1134,4 +1134,569 @@ section{
 }
 #rightArrow1:hover{
     background-position: -130px -20px;
+}
+#leftRight1 ul li p{
+    margin-top: 10px;
+    font-size: 14px;
+    color: #757575;
+}
+#leftRight1 ul li i{
+    margin-top: 5px;
+}
+.rp-list{
+    width: 1240px;
+    height: 415px;
+}
+.rp-list li:nth-child(1){
+    margin-left: 0;
+}
+.rp-list>li{
+    position: relative;
+    float: left;
+    width: 296px;
+    height: 415px;
+    margin-left: 14px;
+    margin-bottom: 14px;
+    background: #fff;
+    transition: all .2s linear;
+}
+.rp-list>li:hover{
+    box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+    transform: translate3d(0, -2px, 0);
+}
+.rp-list li img{
+    width: 296px;
+    height:220px;
+    cursor: pointer;
+    margin-bottom: 28px;
+}
+.rp-list a{
+    color: #333;
+}
+.rp-list .rp-pj{
+    height: 72px;
+    margin: 0 28px 22px;
+    font-size: 14px;
+    line-height: 24px;
+    font-weight: 400;
+    overflow: hidden;
+}
+.rp-list .rp-pjr{
+    position: relative;
+    height: 18px;
+    margin: 0 28px 8px;
+    padding: 0 10px 0 0;
+    font-size: 12px;
+    color: #b0b0b0;
+}
+.rp-list .info{
+    margin: 0 30px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+.rp-list .info h3{
+    display: inline-block;
+    margin: 0;
+    font-size: 14px;
+    font-weight: 400;
+    max-width: 170px;
+    vertical-align: bottom;
+    color: #333;
+}
+.rp-list .info span{
+    color: #e0e0e0;
+    margin: 0 .25em;
+    font-family: sans-serif;
+    font-size: 14px;
+}
+.rp-list .info p{
+    display: inline;
+    color: #ff6700;
+}
+.nr{
+    margin-top: 16px;
+}
+.nr .rp-list>li{
+    height: 374px;
+    padding: 45px 0 0;
+}
+.nr .rp-list>li:nth-child(1){
+    border-top: 1px solid #ffac13;
+    color: #ffac13;
+}
+.nr .rp-list>li:nth-child(2){
+    border-top: 1px solid #83c44e;
+    color: #83c44e;
+}
+.nr .rp-list>li:nth-child(3){
+    border-top: 1px solid #e53935;
+    color: #e53935;
+}
+.nr .rp-list>li:nth-child(4){
+    border-top: 1px solid #2196f3;
+    color: #2196f3;
+}
+.nr .rp-list h2{
+    margin: 0 10px 18px;
+    font-size: 16px;
+    font-weight: 400;
+    text-align: center;
+}
+.nr .nr-wrap{
+    position: relative;
+    height: 340px;
+    overflow: hidden;
+}
+.nr .nr-wrap ul{
+    position: absolute;
+    left: 0;
+    width: 1184px;
+    height: 340px;
+    text-align: center;
+    color: #333;
+}
+.nr .nr-wrap ul li{
+    float: left;
+    width: 296px;
+    height: 340px;
+}
+.nr .nr-wrap ul h4{
+    margin: 0 20px 5px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.25;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+.nr .nr-wrap ul .desc{
+    margin: 0 48px 10px;
+    height: 40px;
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+}
+.nr .nr-wrap ul .desc a{
+    color: #b0b0b0;
+}
+.nr .nr-wrap ul .price{
+    height: 21px;
+    margin: 0 10px 15px;
+    text-align: center;
+}
+.nr .nr-wrap ul .nr-img{
+    width: 216px;
+    height: 154px;
+    margin: 0 auto;
+}
+.nr .nr-wrap ul .nr-img img{
+    width: 216px;
+    height: 154px;
+}
+.focusBox{
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    width: 296px;
+    text-align: center;
+}
+.focusBox li{
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    padding: 10px;
+    margin: 0 2px;
+    cursor: pointer;
+}
+.focusBox li span{
+    display: block;
+    width: 6px;
+    height: 6px;
+    border: 2px solid #fff;
+    border-radius: 6px;
+    text-align: left;
+    background-color: #b0b0b0;
+    transition: all .5s;
+}
+.focusBox .fbg span{
+    border-color: #ff6700;
+    background-color: transparent;
+}
+.focusBox .fbg span:hover{
+    background: #f5f5f5;
+    cursor: default;
+}
+.focusBox li span:hover{
+    background-color: #ff6700;
+}
+.rp-list .nr-left,.rp-list .nr-right{
+    position: absolute;
+    top: 50%;
+    margin-top: -20px;
+    opacity: 0;
+    width: 20px;
+    height: 24px;
+    padding: 12px 0;
+    background: url("../img/l1.jpg")no-repeat;
+    background-position: -6px -6px;
+}
+.rp-list .nr-left:hover{
+    background: url("../img/l2.jpg")no-repeat;
+    background-position: -17px -9px;
+}
+.rp-list .nr-right{
+    right: 0;
+    background: url("../img/r1.jpg")no-repeat;
+    background-position: -6px -5px;
+}
+.rp-list .nr-right:hover{
+    background: url("../img/r2.jpg")no-repeat;
+    background-position: -8px -5px;
+}
+.rp-list>li:hover .nr-left{
+    transition: opacity .6s;
+    opacity: 1;
+}
+.rp-list>li:hover .nr-right{
+    transition: opacity .6s;
+    opacity: 1;
+}
+.last3 .desc{
+    margin: 0 48px 10px;
+    height: 40px;
+    font-size: 12px;
+    line-height: 20px;
+    text-align: center;
+    overflow: hidden;
+    color: #b0b0b0;
+}
+.last3 a{
+    display: inline-block;
+    width: 118px;
+    height: 28px;
+    font-size: 12px;
+    line-height: 28px;
+    background: #fff;
+    border: 1px solid #ffac13;
+    color: #ffac13;
+    transition: all .4s;
+}
+.last3 a:hover{
+    color: #fff;
+    background-color: #ff920f;
+    border-color: #ff920f;
+}
+.last3 img{
+    margin-top: 30px;
+}
+.last3 .de1{
+    border-color: #83c44e;
+    background: #fff;
+    color: #83c44e;
+}
+.last3 .de1:hover{
+    color: #fff;
+    background-color: #71b639;
+    border-color: #71b639;
+}
+.last3 .de2{
+    border-color: #e53935;
+    background: #fff;
+    color: #e53935;
+}
+.last3 .de2:hover{
+    color: #fff;
+    background-color: #e42a27;
+    border-color: #e42a27;
+}
+.last3 .de3{
+    border-color: #2196f3;
+    background: #fff;
+    color: #2196f3;
+}
+.last3 .de3:hover{
+    color: #fff;
+    background-color: #0c80dc;
+    border-color: #0c80dc;
+}
+.main .tvl{
+    margin-top:25px;
+}
+.main .tv{
+    top:4140px;
+}
+.video{
+    width: 1240px;
+    height: 285px;
+}
+.video-list:nth-child(1){
+    margin-left: 0;
+}
+.video-list{
+    position: relative;
+    float: left;
+    width: 296px;
+    height: 285px;
+    margin-left: 14px;
+    margin-bottom: 14px;
+    text-align: center;
+    background: #fff;
+    transition: all .2s linear;
+}
+.video-list:hover{
+    box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+    transform: translate3d(0, -2px, 0);
+}
+.video-list div{
+    position: relative;
+    width: 296px;
+    height: 180px;
+    margin: 0 0 28px;
+    cursor: pointer;
+}
+.video-list div span{
+    position: absolute;
+    left: 20px;
+    bottom: 10px;
+    width: 32px;
+    height: 20px;
+    border: 2px solid #fff;
+    border-radius: 12px;
+    background-color: rgba(0,0,0,0.6);
+    color: #fff;
+    transition: all .2s;
+}
+.video-list div:hover span{
+    border-color: #ff6700;
+    background-color: #ff6700;
+}
+.video-list div span i{
+    position: absolute;
+    left: 13px;
+    top:4px;
+    display: block;
+    width:0;
+    height:0;
+    border-top:6px solid transparent;
+    border-bottom: 6px solid transparent;
+    border-left: 9px solid #fff;
+}
+.video-list h3{
+    margin: 0 0 6px;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+}
+.video-list h3 a{
+    color: #333;
+}
+.video-list h3 a:hover{
+    color: #ff6700;
+}
+.video-list p{
+    height: 18px;
+    margin: 0;
+    font-size: 12px;
+    color: #b0b0b0;
+}
+.footer-content{
+    width: 1226px;
+    margin: 0 auto;
+}
+.service{
+    padding: 27px 0;
+    border-bottom: 1px solid #e0e0e0;
+}
+.service>ul li{
+    float: left;
+    width: 19.8%;
+    height: 25px;
+    font-size: 16px;
+    line-height: 25px;
+    border-left: 1px solid #e0e0e0;
+    text-align: center;
+}
+.service>ul li:nth-child(1){
+    border-left: 0;
+}
+.service>ul li a{
+    color: #616161;
+    transition: color .2s;
+}
+.service>ul li a:hover{
+    color: #ff6700;
+}
+.service>ul li a i{
+    display: inline-block;
+    margin-right: 6px;
+    width: 26px;
+    height:26px;
+    vertical-align: middle;
+}
+.service>ul li:nth-child(1) a i{
+    background: url("../img/xiaomi_icon_01.png")no-repeat;
+    background-position: -68px -88px;
+}
+.service>ul li:nth-child(2) a i{
+    background: url("../img/xiaomi_icon_01.png")no-repeat;
+    background-position: -106px -90px;
+}
+.service>ul li:nth-child(3) a i{
+    background: url("../img/xiaomi_icon_01.png")no-repeat;
+    background-position: -146px -89px;
+}
+.service>ul li:nth-child(4) a i{
+    background: url("../img/xiaomi_icon_01.png")no-repeat;
+    background-position: -185px -88px;
+}
+.service>ul li:nth-child(5) a i{
+    background: url("../img/xiaomi_icon_01.png")no-repeat;
+    background-position: -225px -88px;
+}
+.service>ul li:nth-child(1):hover a i{
+    background-position: -68px -129px;
+}
+.service>ul li:nth-child(2):hover a i{
+    background-position: -106px -130px;
+}
+.service>ul li:nth-child(3):hover a i{
+    background-position: -146px -130px;
+}
+.service>ul li:nth-child(4):hover a i{
+    background-position: -185px -130px;
+}
+.service>ul li:nth-child(5):hover a i{
+    background-position: -225px -132px;
+}
+.footer-list{
+    padding: 40px 0;
+}
+.footer-list dl{
+    float: left;
+    width: 160px;
+    height: 112px;
+}
+.footer-list dl dt{
+    margin: -1px 0 26px;
+    font-size: 14px;
+    line-height: 1.25;
+    color: #424242;
+}
+.footer-list dl dd{
+    margin: 10px 0 0;
+    font-size: 12px;
+}
+.footer-list dl dd a{
+    color: #757575;
+}
+.footer-list dl dd a:hover{
+    color: #ff6700;
+}
+.footer-list div{
+    float: right;
+    width: 251px;
+    height: 112px;
+    border-left: 1px solid #e0e0e0;
+    text-align: center;
+    color: #616161;
+}
+.footer-list div p:nth-child(1){
+    margin: 0 0 5px;
+    font-size: 22px;
+    line-height: 1;
+    color: #ff6700;
+}
+.footer-list div p:nth-child(2){
+    margin: 0 0 16px;
+}
+.footer-list div a{
+    display: inline-block;
+    width: 118px;
+    height: 28px;
+    font-size: 12px;
+    line-height: 28px;
+    border: 1px solid #ff6700;
+    background: #fff;
+    text-align: center;
+    color: #ff6700;
+    transition: all .4s;
+}
+.footer-list div a:hover{
+    color: #fff;
+    background-color: #f25807;
+    border-color: #f25807;
+}
+.footer-list div a i{
+    display: inline-block;
+    width: 14px;
+    height:14px;
+    background: url("../img/xiaomi_icon_01.png")no-repeat;
+    background-position: -164px -21px;
+}
+.footer-list div a:hover i{
+    background-position: -184px -21px;
+}
+.footer-bottom{
+    padding: 30px 0;
+    font-size: 12px;
+    background: #fafafa;
+}
+.bottom-content{
+    width: 1226px;
+    margin: 0 auto;
+}
+.footer-logo{
+    display: block;
+    text-align: left;
+    text-indent: -9999em;
+    overflow: hidden;
+    float: left;
+    width: 57px;
+    height: 57px;
+    margin-right: 10px;
+    background:url("../img/logo-footer.png")no-repeat;
+}
+.bottom-text{
+    float: left;
+    color: #b0b0b0;
+}
+.bottom-text p{
+    line-height: 18px;
+}
+.bottom-text p:nth-child(1) a{
+    color: #757575;
+}
+.bottom-text p:nth-child(1) a:hover{
+    color: #ff6700;
+}
+.bottom-text p:nth-child(2) a:hover{
+    color: #ff6700;
+}
+.bottom-text p:nth-child(1) span{
+    margin: 0 -4px;
+    font-family: sans-serif;
+}
+.bottom-text p:nth-child(2) a{
+    color: #b0b0b0;
+}
+.bottom-img{
+    float: right;
+    height: 28px;
+    margin: 4px 0 0;
+}
+.bottom-img a img{
+    width: auto;
+    height: 28px;
+    margin-left: 7px;
+}
+.bottom-end{
+    display: block;
+    text-align: left;
+    text-indent: -9999em;
+    overflow: hidden;
+    clear: both;
+    margin: 90px auto 0;
+    width: 267px;
+    height: 19px;
+    background: url("../img/end.png")no-repeat center 0;
 }
